@@ -41,6 +41,7 @@ import be.seeseemelk.mockbukkit.plugin.PluginManagerMock;
 import be.seeseemelk.mockbukkit.potion.MockPotionEffectType;
 import be.seeseemelk.mockbukkit.profile.PlayerProfileMock;
 import be.seeseemelk.mockbukkit.scheduler.BukkitSchedulerMock;
+import be.seeseemelk.mockbukkit.scheduler.paper.FoliaAsyncScheduler;
 import be.seeseemelk.mockbukkit.scoreboard.CriteriaMock;
 import be.seeseemelk.mockbukkit.scoreboard.ScoreboardManagerMock;
 import be.seeseemelk.mockbukkit.services.ServicesManagerMock;
@@ -50,8 +51,13 @@ import be.seeseemelk.mockbukkit.tags.TagsMock;
 import com.destroystokyo.paper.entity.ai.MobGoals;
 import com.destroystokyo.paper.event.player.PlayerConnectionCloseEvent;
 import com.destroystokyo.paper.event.server.WhitelistToggleEvent;
+import com.destroystokyo.paper.profile.PlayerProfile;
 import com.google.common.base.Preconditions;
 import io.papermc.paper.datapack.DatapackManager;
+import io.papermc.paper.math.Position;
+import io.papermc.paper.threadedregions.scheduler.AsyncScheduler;
+import io.papermc.paper.threadedregions.scheduler.GlobalRegionScheduler;
+import io.papermc.paper.threadedregions.scheduler.RegionScheduler;
 import net.kyori.adventure.audience.Audience;
 import net.kyori.adventure.text.Component;
 import net.kyori.adventure.text.format.NamedTextColor;
@@ -100,14 +106,17 @@ import org.bukkit.event.player.AsyncPlayerPreLoginEvent;
 import org.bukkit.event.player.PlayerJoinEvent;
 import org.bukkit.event.player.PlayerLoginEvent;
 import org.bukkit.event.server.MapInitializeEvent;
+import org.bukkit.event.server.ServerLoadEvent;
 import org.bukkit.generator.ChunkGenerator.ChunkData;
 import org.bukkit.inventory.InventoryHolder;
 import org.bukkit.inventory.ItemStack;
 import org.bukkit.inventory.Merchant;
 import org.bukkit.inventory.Recipe;
 import org.bukkit.loot.LootTable;
+import org.bukkit.map.MapCursor;
 import org.bukkit.packs.DataPackManager;
 import org.bukkit.plugin.Plugin;
+import org.bukkit.plugin.java.JavaPlugin;
 import org.bukkit.plugin.messaging.Messenger;
 import org.bukkit.plugin.messaging.StandardMessenger;
 import org.bukkit.potion.PotionBrewer;
@@ -116,6 +125,7 @@ import org.bukkit.scoreboard.Criteria;
 import org.bukkit.structure.StructureManager;
 import org.jetbrains.annotations.NotNull;
 import org.jetbrains.annotations.Nullable;
+import org.spigotmc.event.player.PlayerSpawnLocationEvent;
 
 import javax.imageio.ImageIO;
 import java.awt.image.BufferedImage;
@@ -123,12 +133,14 @@ import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.InetAddress;
 import java.net.InetSocketAddress;
 import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Base64;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Comparator;
 import java.util.HashMap;
 import java.util.HashSet;
 import java.util.Iterator;
@@ -152,7 +164,7 @@ import java.util.stream.Collectors;
 public class ServerMock extends Server.Spigot implements Server
 {
 
-	private static final Component MOTD = Component.text("A Minecraft Server");
+	private Component motd = Component.text("A Minecraft Server");
 	private static final Component NO_PERMISSION = Component.text("I'm sorry, but you do not have permission to perform this command. Please contact the server administrators if you believe that this is in error.", NamedTextColor.RED);
 
 	private final Logger logger = Logger.getLogger("ServerMock");
@@ -169,6 +181,7 @@ public class ServerMock extends Server.Spigot implements Server
 	private final ScoreboardManagerMock scoreboardManager = new ScoreboardManagerMock();
 	private final Map<String, Criteria> criteria = new HashMap<>();
 	private final BukkitSchedulerMock scheduler = new BukkitSchedulerMock();
+	private final FoliaAsyncScheduler foliaAsyncScheduler = new FoliaAsyncScheduler(scheduler);
 	private final ServicesManagerMock servicesManager = new ServicesManagerMock();
 	private final MockPlayerList playerList = new MockPlayerList();
 	private final MockCommandMap commandMap = new MockCommandMap(this);
@@ -188,6 +201,7 @@ public class ServerMock extends Server.Spigot implements Server
 	private final @NotNull Set<OfflinePlayer> whitelistedPlayers = new LinkedHashSet<>();
 
 	private final @NotNull ServerConfiguration serverConfiguration = new ServerConfiguration();
+	private final Map<Class<?>, Registry<?>> registry = new HashMap<>();
 
 	/**
 	 * Constructs a new ServerMock and sets it up.
@@ -309,6 +323,10 @@ public class ServerMock extends Server.Spigot implements Server
 			playerList.disconnectPlayer(player);
 			return;
 		}
+
+		PlayerSpawnLocationEvent playerSpawnLocationEvent = new PlayerSpawnLocationEvent(player, player.getLocation());
+		getPluginManager().callEvent(playerSpawnLocationEvent);
+		player.setLocation(playerSpawnLocationEvent.getSpawnLocation());
 
 		registerEntity(player);
 	}
@@ -814,7 +832,9 @@ public class ServerMock extends Server.Spigot implements Server
 	@Override
 	public @NotNull Set<String> getIPBans()
 	{
-		return this.playerList.getIPBans().getBanEntries().stream().map(BanEntry::getTarget)
+		return this.playerList.getIPBans().getEntries().stream()
+				.map(BanEntry::getBanTarget)
+				.map(InetAddress::getHostAddress)
 				.collect(Collectors.toSet());
 	}
 
@@ -831,12 +851,26 @@ public class ServerMock extends Server.Spigot implements Server
 	}
 
 	@Override
+	public void banIP(@NotNull InetAddress address)
+	{
+		// TODO Auto-generated method stub
+		throw new UnimplementedOperationException();
+	}
+
+	@Override
+	public void unbanIP(@NotNull InetAddress address)
+	{
+		// TODO Auto-generated method stub
+		throw new UnimplementedOperationException();
+	}
+
+	@Override
 	public @NotNull BanList getBanList(@NotNull Type type)
 	{
 		return switch (type)
 		{
 			case IP -> playerList.getIPBans();
-			case NAME -> playerList.getProfileBans();
+			case NAME, PROFILE -> playerList.getProfileBans();
 		};
 	}
 
@@ -931,28 +965,42 @@ public class ServerMock extends Server.Spigot implements Server
 	@Override
 	public boolean addRecipe(Recipe recipe)
 	{
-		recipes.add(recipe);
-		return true;
+		Preconditions.checkNotNull(recipe, "recipe cannot be null");
+		return addRecipe(recipe, false);
 	}
 
 	@Override
+	public boolean addRecipe(@Nullable Recipe recipe, boolean resendRecipes)
+	{
+		AsyncCatcher.catchOp("Recipe add");
+		if (recipe == null)
+			return false;
+		// Pretend we sent the packet if resendRecipes is true
+		return recipes.add(recipe);
+	}
+
+	@Override
+	@SuppressWarnings("deprecation")
 	public @NotNull List<Recipe> getRecipesFor(@NotNull ItemStack item)
 	{
+		Preconditions.checkNotNull(item, "item cannot be null");
 		return recipes.stream().filter(recipe ->
 		{
 			ItemStack result = recipe.getResult();
-			// Amount is explicitly ignored here
-			return result.getType() == item.getType() && result.getItemMeta().equals(item.getItemMeta());
-		}).collect(Collectors.toList());
+			return result.getType() == item.getType() && (result.getDurability() == -1 || result.getDurability() == item.getDurability());
+		}).toList();
 	}
 
+	@Nullable
 	@Override
-	public Recipe getRecipe(NamespacedKey key)
+	public Recipe getRecipe(@NotNull NamespacedKey key)
 	{
+		Preconditions.checkNotNull(key, "key cannot be null");
+
 		for (Recipe recipe : recipes)
 		{
 			// Seriously why can't the Recipe interface itself just extend Keyed...
-			if (recipe instanceof Keyed && ((Keyed) recipe).getKey().equals(key))
+			if (recipe instanceof Keyed keyed && keyed.getKey().equals(key))
 			{
 				return recipe;
 			}
@@ -978,8 +1026,15 @@ public class ServerMock extends Server.Spigot implements Server
 	}
 
 	@Override
-	public boolean removeRecipe(NamespacedKey key)
+	public boolean removeRecipe(@NotNull NamespacedKey key)
 	{
+		return removeRecipe(key, false);
+	}
+
+	@Override
+	public boolean removeRecipe(@NotNull NamespacedKey key, boolean resendRecipes)
+	{
+		Preconditions.checkNotNull(key, "key cannot be null");
 		Iterator<Recipe> iterator = recipeIterator();
 
 		while (iterator.hasNext())
@@ -987,7 +1042,7 @@ public class ServerMock extends Server.Spigot implements Server
 			Recipe recipe = iterator.next();
 
 			// Seriously why can't the Recipe interface itself just extend Keyed...
-			if (recipe instanceof Keyed && ((Keyed) recipe).getKey().equals(key))
+			if (recipe instanceof Keyed keyed && keyed.getKey().equals(key))
 			{
 				iterator.remove();
 				return true;
@@ -1171,6 +1226,24 @@ public class ServerMock extends Server.Spigot implements Server
 		return this.serverConfiguration.isAllowNether();
 	}
 
+	@Override
+	public @NotNull List<String> getInitialEnabledPacks()
+	{
+		throw new UnimplementedOperationException();
+	}
+
+	@Override
+	public @NotNull List<String> getInitialDisabledPacks()
+	{
+		throw new UnimplementedOperationException();
+	}
+
+	@Override
+	public @NotNull DataPackManager getDataPackManager()
+	{
+		throw new UnimplementedOperationException();
+	}
+
 	/**
 	 * Sets whether the Nether should be allowed.
 	 *
@@ -1349,8 +1422,55 @@ public class ServerMock extends Server.Spigot implements Server
 	@Override
 	public void reload()
 	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
+		Plugin[] pluginsClone = pluginManager.getPlugins().clone();
+		this.pluginManager.clearPlugins();
+		this.commandMap.clearCommands();
+		for (Plugin plugin : pluginsClone)
+		{
+			getPluginManager().disablePlugin(plugin);
+			getWorlds().stream().map(WorldMock.class::cast).forEach(w -> w.clearMetadata(plugin));
+			getEntities().forEach(e -> e.clearMetadata(plugin));
+			getOnlinePlayers().forEach(p -> p.clearMetadata(plugin));
+		}
+
+//		reloadData(); Not implemented.
+
+		// Wait up to 2.5 seconds for plugins to finish async tasks.
+		int pollCount = 0;
+		while (pollCount < 50 && getScheduler().getActiveWorkers().size() > 0)
+		{
+			try
+			{
+				Thread.sleep(50); // TODO: Can we avoid busy waiting?
+			}
+			catch (InterruptedException ignored)
+			{
+				Thread.currentThread().interrupt();
+			}
+			pollCount++;
+		}
+
+		getScheduler().saveOverdueTasks();
+
+		List<Plugin> newPlugins = new ArrayList<>(pluginsClone.length);
+		for (Plugin oldPlugin : pluginsClone)
+		{
+			if (!(oldPlugin instanceof JavaPlugin oldJavaPlugin))
+				continue;
+			// This is a little sketchy, but we have to do it since when initializing plugins we create a subclass of the main class.
+			// If we try to then load that subclass as the plugin, it doesn't work, so we need to get the original class to subclass from again.
+			@SuppressWarnings("unchecked")
+			Class<? extends JavaPlugin> originalClass = (Class<? extends JavaPlugin>) oldJavaPlugin.getClass().getSuperclass();
+			// Don't use MockBukkit#load here since we enable later.
+			JavaPlugin plugin = getPluginManager().loadPlugin(originalClass, oldJavaPlugin.getDescription(), new Object[0]);
+			newPlugins.add(plugin);
+		}
+
+		newPlugins.stream()
+				.sorted(Comparator.comparing(p -> p.getDescription().getLoad()))
+				.forEach(plugin -> getPluginManager().enablePlugin(plugin));
+
+		new ServerLoadEvent(ServerLoadEvent.LoadType.RELOAD).callEvent();
 	}
 
 	@Override
@@ -1358,6 +1478,18 @@ public class ServerMock extends Server.Spigot implements Server
 	{
 		// TODO Auto-generated method stub
 		throw new UnimplementedOperationException();
+	}
+
+	@Override
+	public void updateResources()
+	{
+		// This only sends packets to players in Paper.
+	}
+
+	@Override
+	public void updateRecipes()
+	{
+		// This only sends packets to players in Paper.
 	}
 
 	@Override
@@ -1515,12 +1647,17 @@ public class ServerMock extends Server.Spigot implements Server
 	}
 
 	@Override
+	@SuppressWarnings("unchecked")
 	public @NotNull Set<OfflinePlayer> getBannedPlayers()
 	{
-		return this.getBanList(Type.NAME)
-				.getBanEntries()
+		return (Set<OfflinePlayer>) this.getBanList(Type.PROFILE)
+				.getEntries()
 				.stream()
-				.map(banEntry -> getOfflinePlayer(banEntry.getTarget()))
+				.map(banEntry ->
+				{
+					return ((BanEntry<PlayerProfile>) banEntry).getBanTarget().getId();
+				})
+				.map(uuid -> this.getOfflinePlayer((UUID) uuid))
 				.collect(Collectors.toSet());
 	}
 
@@ -1604,35 +1741,28 @@ public class ServerMock extends Server.Spigot implements Server
 	@Override
 	public @NotNull Component motd()
 	{
-		return MOTD;
+		return this.motd;
+	}
+
+	@Override
+	public void motd(@NotNull Component motd)
+	{
+		Preconditions.checkNotNull(motd, "motd cannot be null");
+		this.motd = motd;
 	}
 
 	@Override
 	@Deprecated
 	public @NotNull String getMotd()
 	{
-		return LegacyComponentSerializer.legacySection().serialize(MOTD);
+		return LegacyComponentSerializer.legacySection().serialize(this.motd);
 	}
 
 	@Override
-	public @NotNull List<String> getInitialEnabledPacks()
+	public void setMotd(@NotNull String motd)
 	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
-	}
-
-	@Override
-	public @NotNull List<String> getInitialDisabledPacks()
-	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
-	}
-
-	@Override
-	public @NotNull DataPackManager getDataPackManager()
-	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
+		Preconditions.checkNotNull(motd, "motd cannot be null");
+		this.motd = LegacyComponentSerializer.legacySection().deserialize(motd);
 	}
 
 	@Override
@@ -1991,6 +2121,18 @@ public class ServerMock extends Server.Spigot implements Server
 	}
 
 	@Override
+	public @Nullable ItemStack createExplorerMap(@NotNull World world,
+												 @NotNull Location location,
+												 @NotNull org.bukkit.generator.structure.StructureType structureType,
+												 @NotNull MapCursor.Type mapIcon,
+												 int radius,
+												 boolean findUnexplored)
+	{
+		// TODO Auto-generated method stub
+		throw new UnimplementedOperationException();
+	}
+
+	@Override
 	public @NotNull KeyedBossBar createBossBar(@NotNull NamespacedKey key, @NotNull String title, @NotNull BarColor color, @NotNull BarStyle style, BarFlag... flags)
 	{
 		Preconditions.checkNotNull(key, "A NamespacedKey must never be null");
@@ -2036,10 +2178,14 @@ public class ServerMock extends Server.Spigot implements Server
 	}
 
 	@Override
+	@SuppressWarnings("unchecked")
 	public @Nullable <T extends Keyed> Registry<T> getRegistry(@NotNull Class<T> tClass)
 	{
-		// TODO Auto-generated method stub
-		throw new UnimplementedOperationException();
+		if (!registry.containsKey(tClass))
+		{
+			registry.put(tClass, RegistryMock.createRegistry(tClass));
+		}
+		return (Registry<T>) registry.get(tClass);
 	}
 
 	@Override
@@ -2331,6 +2477,66 @@ public class ServerMock extends Server.Spigot implements Server
 	public @NotNull PotionBrewer getPotionBrewer()
 	{
 		// TODO Auto-generated method stub
+		throw new UnimplementedOperationException();
+	}
+
+	@Override
+	public @NotNull RegionScheduler getRegionScheduler()
+	{
+		throw new UnimplementedOperationException();
+	}
+
+	@Override
+	public @NotNull AsyncScheduler getAsyncScheduler()
+	{
+		return this.foliaAsyncScheduler;
+	}
+
+	@Override
+	public @NotNull GlobalRegionScheduler getGlobalRegionScheduler()
+	{
+		throw new UnimplementedOperationException();
+	}
+
+	@Override
+	public boolean isOwnedByCurrentRegion(@NotNull World world, @NotNull Position position)
+	{
+		throw new UnimplementedOperationException();
+	}
+
+	@Override
+	public boolean isOwnedByCurrentRegion(@NotNull World world, @NotNull Position position, int squareRadiusChunks)
+	{
+		throw new UnimplementedOperationException();
+	}
+
+	@Override
+	public boolean isOwnedByCurrentRegion(@NotNull Location location)
+	{
+		throw new UnimplementedOperationException();
+	}
+
+	@Override
+	public boolean isOwnedByCurrentRegion(@NotNull Location location, int squareRadiusChunks)
+	{
+		throw new UnimplementedOperationException();
+	}
+
+	@Override
+	public boolean isOwnedByCurrentRegion(@NotNull World world, int chunkX, int chunkZ)
+	{
+		throw new UnimplementedOperationException();
+	}
+
+	@Override
+	public boolean isOwnedByCurrentRegion(@NotNull World world, int chunkX, int chunkZ, int squareRadiusChunks)
+	{
+		throw new UnimplementedOperationException();
+	}
+
+	@Override
+	public boolean isOwnedByCurrentRegion(@NotNull Entity entity)
+	{
 		throw new UnimplementedOperationException();
 	}
 
